cluster/apps/default/uptime-kuma/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      nodeSelector:
        topology.kubernetes.io/region: lab
      containers:
        - image: ghcr.io/louislam/uptime-kuma:2.5.6
          imagePullPolicy: Always
          name: uptime-kuma
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: uptime-kuma
          persistentVolumeClaim:
            claimName: uptime-kuma-ceph
      dnsConfig:
        options:
          - name: ndots
            value: "1"
