cluster/apps/default/uptime-kuma/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "trending-up"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd,networking-authentik@kubernetescrd"
    external-dns/external: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - uptime.${SECRET_LAB_DOMAIN}
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: uptime.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
